--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,50 @@
+
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+
+### Eclipse ###
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# Eclipse Core
+.project
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# libgdx libraries
+war/
+libgdx-*.zip
+libgdx-*.zip.MD5
+/gdx/libs
+
+# Temporary files
+*~
+
+# Files created by MAC
+*.DS_Store
+
+# Files created by Java
 *.class
 
 # Mobile Tools for Java (J2ME)
