--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,39 @@
+## Java
 
+*.class
+*.war
+*.ear
+hs_err_pid*
 
-### Maven ###
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+## GWT
+war/
+html/war/gwt_bree/
+html/gwt-unitCache/
+.apt_generated/
+html/war/WEB-INF/deploy/
+html/war/WEB-INF/classes/
+.gwt/
+gwt-unitCache/
+www-test/
+.gwt-tmp/
 
-### Eclipse ###
+## Android Studio and Intellij and Android in general
+android/libs/armeabi/
+android/libs/armeabi-v7a/
+android/libs/x86/
+android/gen/
+.idea/
+*.ipr
+*.iws
+*.iml
+out/
+com_crashlytics_export_strings.xml
+
+## Eclipse
+.classpath
+.project
 .metadata
-.gradle
-bin/
+**/bin/
 tmp/
 *.tmp
 *.bak
@@ -22,38 +42,23 @@ tmp/
 local.properties
 .settings/
 .loadpath
-
-# Eclipse Core
-.project
-
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
-# Locally stored "Eclipse launch configurations"
+.externalToolBuilders/
 *.launch
 
-# libgdx libraries
-war/
-libgdx-*.zip
-libgdx-*.zip.MD5
-/gdx/libs
+## NetBeans
+**/nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
 
-# Temporary files
-*~
+## Gradle
 
-# Files created by MAC
-*.DS_Store
+.gradle
+gradle-app.setting
+build/
 
-# Files created by Java
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+## OS Specific
+.DS_Store
