--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        testCompile group: 'junit', name: 'junit', version: '4.11'
     }
 }
 
