--- a/build.gradle
+++ b/build.gradle
@@ -44,12 +44,26 @@ project(":desktop") {
 project(":core") {
     apply plugin: "java"
 
+	sourceSets.test.java.srcDirs = ["src/"]
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        testCompile group: 'junit', name: 'junit', version: '4.11'
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+        
+        compile 'junit:junit:4.+'
+        compile "org.mockito:mockito-all:1.9.5"
+        
+        compile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+        
+        testCompile group: 'junit', name: 'junit', version: '4.11'
+        testCompile "org.mockito:mockito-all:1.9.5"
+        
+        testCompile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+        testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        testCompile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        testCompile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
     }
 }
 
